# uni

./: .bazelignore  .bazelrc  .envrc  .gitattributes  .gitignore  .nojekyll  404.html  LICENSE  README.md  WORKSPACE  WORKSPACE.bazel  en.search-data.min.058ff8c3cd212347fb3920bec4abc686d31821b15c3906ed9c39c7cc76d7be66.json  en.search-data.min.135cf2607cfa2e8ff186f5f87db2412819910ac0b5f5d472f67be6c1f03c6b47.json  en.search-data.min.355f94a21fe3d47209919707bc289cad7fdc2bab7b981d3052e8c0c08a40d6b7.json  en.search-data.min.41b547beaa07b3f82b7585fab4045c6669a31c06b04ce3816fec365b914ed7e0.json  en.search-data.min.486afbd3f0600ceb29903b2f330c4a952fb95a94f6f08bb8f971880a222e603c.json  en.search-data.min.5b52b1df116641e35257325db54ba952cad415efec342b91b98a3bf725b60c6f.json  en.search-data.min.790cf6007184cb9110c170bb7e733dd03e18b8cb6a1cb88937d309fb75d6a166.json  en.search-data.min.7c6f83d3ba8aa0096d032e2dee4334aec827570059010781e0aa3f3c37ad4793.json  en.search-data.min.94754dd7d1d23edaaba7eeca53a13b089fffc6849086084ad945b5bcff2f74ff.json  en.search-data.min.aaa6540bf006295743d7eeb269ca8999d733f51f003c57a8321d6d0abf4f9d63.json  en.search-data.min.b3d78def64430577476523a5aa50d29b59368093a35b1d3651d167df5f6320f3.json  en.search-data.min.b6ae8c3ff00fc2b897b50b0fa63d3933a9e89ec0681ff0cb28f12d5069e0e1fd.json  en.search-data.min.c53a15ddbe085b3e17f1c0b4b60ae20dd0f9462350f3b8e981a5df5250447c43.json  en.search-data.min.cb030f9b8516ef26162bcde56e665f460856a8157107348daf8990818bd4e1a4.json  en.search-data.min.e387c3acb6ef884f3569d1132a574d1fe47414d5a1247477e5e8409a6c812c0a.json  en.search-data.min.ee77b2d8627feb371ea806a832afc1b35bd4eae603e2552acb5b240b3dcfb859.json  en.search-data.min.f524084ed4f83022102aca509168b5e1782844248d45a8b4105eae4d7aac4262.json  en.search.min.0b47a936a8a5a796e1cbbd17c033cddd35b37b34234e361402004cbe572c1ca8.js  en.search.min.16f38c49ce2baaf8883739b169891eef958a5d8ca38d47de6d8c286270773e7c.js  en.search.min.19449d76db9239cfbb22024e1a513056d996a3b2c1682876063b2903239d7f02.js  en.search.min.20b4eb98850c2029d2581abe1e131a65be0c6bd28e4cfe3c879918df59072cc8.js  en.search.min.24b62ed8a57b0f1ef86c7924eea14f3f02f2a840a526a37613bae56b33b86528.js  en.search.min.2abaf13d13cf95eaa0fdd6de52d7a07f944dca49c75040028342d1f81f7f2036.js  en.search.min.2b306b07b85e1288fcff89cb5a4ea78f12a733f653f54d4d3bcba78fcd8b651c.js  en.search.min.39193328403b9be42b5394d6f32ad33053ac481fe668262768b4113b47e57ba2.js  en.search.min.3e18b957aaad79efe7a2e6c700a657499e5fe1f735157406cf60d31d75cc23e5.js  en.search.min.54fb1edeb5b8e00cfac26660b457a1797b683649a1f967b76f0d0c11f69edfc0.js  en.search.min.635a4d6e444c278999a529f5fb94e1788f68b918199e8cf36537a19e8a6a0c7a.js  en.search.min.8df292fcb8e102a12bf9511d7ad4f0dd047d7b925a32cd1503476bd6529f06ad.js  (+12 more)
algorithms/named/: AStar.java  BFS.java  BUILD  BUILD.bazel  BellmanFord.java  BinarySearch.java  DFS.java  Dijkstras.java  Kruskals.java  LinkedList.java  Mergesort.java  NQueens.java  Prims.java  Quickselect.java  Quicksort.java  TopologicalSort.java  TreeTraversal.java  UnionFind.java  UnionFindTest.java  binary_search.py  dijkstras.py  mergesort.py  union_find.py
books/crafting_interpreters/jlox/lox/: AstPrinter.java  BUILD.bazel  Environment.java  Expr.java  Interpreter.java  Lox.java  LoxCallable.java  LoxClass.java  LoxFunction.java  LoxInstance.java  Parser.java  Resolver.java  Return.java  RuntimeError.java  Scanner.java  Stmt.java  TokenType.java
books/crafting_interpreters/rlox/lox/: BUILD.bazel  chunk.rs  compiler.rs  debug.rs  main.rs  scanner.rs  value.rs  vm.rs
books/data_science_from_scratch/4_linear_algebra/: BUILD.bazel  LinearAlgebra.java  linear_algebra.py  matrices.py
books/fp_in_scala/src/main/scala/fpinscala/gettingstarted/: BUILD.bazel  (+2 more)
books/ostep/: BUILD.bazel  Cargo.toml  readme.md
books/programming_rust/actix-gcd/: BUILD.bazel  Cargo.toml
books/programming_rust/actix-gcd/src/: main.rs
books/programming_rust/mandelbrot/: BUILD.bazel  Cargo.toml
books/programming_rust/mandelbrot/src/: main.rs
books/the_rust_programming_language/guessing_game/: BUILD.bazel  Cargo.toml
books/the_rust_programming_language/guessing_game/src/: main.rs
books/the_rust_programming_language/hello/: 404.html  BUILD.bazel  hello.html
books/the_rust_programming_language/hello/src/: lib.rs  main.rs
databases/byo_redis/: .gitignore  BUILD.bazel  readme.md  spawn_redis_server.sh
databases/byo_redis/src/main/java/: CommandException.java  Commands.java  Datastore.java  Main.java  RedisData.java  RedisSerializationProtocol.java  Scanner.java  ScannerException.java  Server.java  TestRedisData.java  TestRedisSerializationProtocol.java  TestScanner.java  Token.java
databases/fromscratch_heapfile_and_hashindex/: BUILD.bazel  readme.md
databases/fromscratch_heapfile_and_hashindex/data/: TRUNCATED_DATASET.csv  TRUNCATED_DATASET_WO_HEADER.csv
databases/fromscratch_heapfile_and_hashindex/src/main/java/: Bucket.java  ByteUtils.java  DerbyDBImport.java  HashIndex.java  HeapFile.java  HeapPage.java  IntItem.java  Item.java  LinearTable.java  LongItem.java  PathUtils.java  StringItem.java  Tuple.java  TupleDesc.java  dbload.java  dbquery.java  hashload.java
machine_learning/methods/k_nearest_neighbors/: BUILD.bazel  kdtree.py  scratch.py
operating_systems/linux/strace_in_seventy_lines/: BUILD.bazel  minitrace.c  readme.md
operating_systems/linux/strace_rs/: Cargo.toml
operating_systems/linux/strace_rs/src/: lib.rs  main.rs  ptrace.rs
operating_systems/linux/strace_rs/tests/: strace_test.rs
optimization/: BUILD.bazel  gradient_descent.ipynb  gradient_descent.py  gradient_descent_test.py
optimization/basic_neuralnet_lib/: BUILD  demo.py  layers.py  loss.py  neuralnet.py  training.py
optimization/basic_neuralnet_lib_java/: BUILD.bazel  Demo.java  Layers.java  Loss.java  MeanSquaredError.java  Tensor.java
performance/computers-are-fast/: Cargo.toml  README.md  benches.py  main.py  message.json  modal_runtime.py
performance/computers-are-fast/src/: lib.rs  main.rs
performance/memory-bandwidth/: BUILD.bazel  fts_cache_test.cc  results_plotting.py
(+405 files in other folders)
