load("@rules_java//java:defs.bzl", "java_binary", "java_test")

java_binary(
    name = "byo_redis",
    srcs = glob(["src/main/java/*.java"], exclude=["src/main/java/Test*.java"]),
    main_class = "com.thundergolfer.uni.byo.redis.Main",
    deps = [],
)

java_test(
    name = "TestScanner",
    srcs = glob(["src/main/java/*.java"]),
    test_class = "com.thundergolfer.uni.byo.redis.TestScanner",
    deps = [
        "//third_party:junit4",
    ],
)

java_test(
    name = "TestRedisSerializationProtocol",
    srcs = glob(["src/main/java/*.java"]),
    test_class = "com.thundergolfer.uni.byo.redis.TestRedisSerializationProtocol",
    deps = [
        "//third_party:junit4",
    ],
)
