[package]
name = "computers-are-fast"
version = "0.1.0"
edition = "2021"

[lib]
proc-macro = true

[dependencies]
anyhow = "1.0.86"
openssl = "0.10.64"
paste = "1.0.15"
prettyplease = "0.2.20"
proc-macro2 = "1.0.86"
quote = "1.0.36"
rust-format = {version="0.3.4", features=["pretty_please"]}
serde = {version = "1.0.203", features = ["derive"] }
serde_json = "1.0.117"
sha2 = "0.10.8"
syn = {version = "2.0.68", features = ["full"]}
sysinfo = "0.30.12"
tempfile = "3.10.1"
