load("@rules_python//python:defs.bzl", "py_binary")
load("@pypi//:requirements.bzl", "requirement")

# Trying out the work done in
# https://www.forrestthewoods.com/blog/memory-bandwidth-napkin-math/.
#
# WARN: This code takes more than 45 minutes to run on my OSX Macbook Pro 2018.
cc_binary(
    name = "memory-bandwidth",
    srcs = ["fts_cache_test.cc"],
    deps = [],
    copts = [
        "-std=c++17",
        "-mavx",
        "-mavx2"
    ],
    # Currently can't get this to compile on Linux.
    target_compatible_with = select({
        "@platforms//os:osx": [],  # [] -> compatible with everything
        "//conditions:default": ["@platforms//:incompatible"],
    })
)

# Original source from
# https://gist.github.com/forrestthewoods/6bbf49cd778adb2ff5ef8fd85d2b3add.
py_binary(
    name = "results_plotting",
    main = "results_plotting.py",
    srcs = ["results_plotting.py"],
    deps = [
        requirement("matplotlib"),
        requirement("numpy"),
    ]
)
