load("@rules_python//python:defs.bzl", "py_binary", "py_test")

py_binary(
    name = "linear_algebra",
    srcs = ["linear_algebra.py"],
)

py_test(
    name = "linear_algebra_test",
    srcs = ["linear_algebra.py"],
    main = "linear_algebra.py",
)

py_test(
    name = "matrices_test",
    srcs = ["matrices.py"],
    main = "matrices.py",
    deps = [":linear_algebra"],
    imports = ["books/data_science_from_scratch/4_linear_algebra"]
)
