load("@rules_java//java:defs.bzl", "java_test")
load("@rules_python//python:defs.bzl", "py_binary", "py_test")

py_binary(
    name = "linear_algebra",
    srcs = ["linear_algebra.py"],
)

py_test(
    name = "linear_algebra_test",
    srcs = ["linear_algebra.py"],
    main = "linear_algebra.py",
)

py_test(
    name = "matrices_test",
    srcs = ["matrices.py"],
    main = "matrices.py",
    deps = [":linear_algebra"],
    imports = ["books/data_science_from_scratch/4_linear_algebra"]
)

java_test(
    name = "LinearAlgebra",
    srcs = ["LinearAlgebra.java"],
    test_class = "books.data_science_from_scratch.linear_algebra.LinearAlgebra",
    deps = [
        "//third_party:junit4",
    ],
)
