load("@rules_rust//rust:defs.bzl", "rust_binary")
load("@crates//:defs.bzl", "crate_deps")

# Chapter 2: A Tour of Rust - Serving Pages to the Web
rust_binary(
    name = "actix-gcd",
    srcs = ["src/main.rs"],
    deps = crate_deps([
        "actix-web",
        "serde",
    ]),
)

exports_files(["Cargo.toml"])
