load("@rules_rust//rust:defs.bzl", "rust_binary", "rust_test")
load("@crates//:defs.bzl", "crate_deps")

# Chapter 2: A Tour of Rust - Concurrency
rust_binary(
    name = "mandelbrot",
    srcs = ["src/main.rs"],
    deps = crate_deps(["image", "num"]),
    # Pretty awkward compared to `cargo build --release`
    # https://github.com/bazelbuild/rules_rust/issues/515
    rustc_flags = ["--codegen=opt-level=3"]
)

rust_test(
    name = "mandelbrot_test",
    srcs = ["src/main.rs"],
    deps = crate_deps(["image", "num"]),
)

exports_files(["Cargo.toml"])
