# NOTE: Using Bazel's built-in cc rules.

cc_binary(
    name = "minitrace",
    srcs = ["minitrace.c"],
    deps = [],
    # `ptrace`, used by minitrace.c, is only available on Linux.
    target_compatible_with = select({
        "@platforms//os:linux": [],  # [] -> compatible with everything
        "//conditions:default": ["@platforms//:incompatible"],
    })
)
