# NOTE: Using Bazel's built-in cc rules.

cc_binary(
    name = "minitrace",
    srcs = ["minitrace.c"],
    deps = [],
    # `ptrace`, used by minitrace.c, is only available on Linux.
    # sys/reg.h is only valid on x86
    target_compatible_with = [
	"@platforms//os:linux",
	"@platforms//cpu:x86_64",
    ],
)
