load("@rules_java//java:defs.bzl", "java_binary")

java_binary(
    name="Lox",
    srcs = glob(["*.java"]),
    main_class = "com.craftinginterpreters.lox.Lox"
)

# Used in section 5.4, A (Not Very) Pretty-Printer.
java_binary(
    name = "AstPrinter",
    srcs = glob(["*.java"]),
    main_class = "com.craftinginterpreters.lox.AstPrinter"
)
