load("@rules_rust//rust:defs.bzl", "rust_binary", "rust_test")

DEBUG = True
# Pretty awkward compared to `cargo build --release`
# https://github.com/bazelbuild/rules_rust/issues/515
RUSTC_FLAGS = [] if DEBUG else ["--codegen=opt-level=3"]

rust_binary(
    name = "lox",
    srcs = glob(["*.rs"]),
    rustc_flags = RUSTC_FLAGS
)

rust_test(
    name = "lox_test",
    crate = ":lox",
)
